--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,17 +1,14 @@
-.post-container {
-	background: #e2e8d5;
-	display: flex;
-	flex-direction: column;
-	padding: 3%;
-	margin: 0 2%;
+.post {
+  border: 2px solid #0b5ed7;
+  border-radius: 10px;;
 }
-.heading {
-	height: 126px;
-	text-align: center;
-	display: flex;
-	align-items: center;
+.content {
+  padding: 10px;
 }
-.image {
-	width: 100%;
-	height: 210px;
+.img {
+  border-radius: 10px 10px 0 0;
+}
+.badge {
+  top: 10px; right: 20px;
+  font-size: 10px;
 }
